{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 31,
  "lineage": "8536559a-be9d-8245-21f6-44582f137b2d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-071b5ff524a643ba1",
            "public_dns": "ec2-3-20-253-119.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.253.119",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00e3c7cdf0a690ca4",
            "public_dns": "ec2-3-138-45-197.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.45.197",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767235477326:internet-gateway/igw-084800ac4aea0adb6",
            "id": "igw-084800ac4aea0adb6",
            "owner_id": "767235477326",
            "vpc_id": "vpc-00630b6179ae52f73"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_vpc_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00289e5ae160d2f12",
            "original_route_table_id": "rtb-061458de1e0cb8051",
            "route_table_id": "rtb-0a585e944565b2a03",
            "vpc_id": "vpc-00630b6179ae52f73"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071b5ff524a643ba1",
            "id": "nat-0a4af8291a8fe8ef8",
            "network_interface_id": "eni-0e55df8c15af482a9",
            "private_ip": "10.0.0.24",
            "public_ip": "3.20.253.119",
            "subnet_id": "subnet-03798007526c3652f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e3c7cdf0a690ca4",
            "id": "nat-0acffd5296065c56b",
            "network_interface_id": "eni-0028ae4526091c10f",
            "private_ip": "10.0.0.43",
            "public_ip": "3.138.45.197",
            "subnet_id": "subnet-01086d38196203f2e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cb7c395b663d16d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a4af8291a8fe8ef8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb7c395b663d16d5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c8d0a447bd2ec2a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0acffd5296065c56b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c8d0a447bd2ec2a2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a585e944565b2a03",
            "owner_id": "767235477326",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-084800ac4aea0adb6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-00630b6179ae52f73"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cb7c395b663d16d5",
            "owner_id": "767235477326",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-00630b6179ae52f73"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c8d0a447bd2ec2a2",
            "owner_id": "767235477326",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-00630b6179ae52f73"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f43ed02732876fb2",
            "route_table_id": "rtb-0cb7c395b663d16d5",
            "subnet_id": "subnet-049cbd20f7c7f6c51"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b25c84fd147fcbb3",
            "route_table_id": "rtb-0c8d0a447bd2ec2a2",
            "subnet_id": "subnet-00df1e9bd0b088672"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d7b1a58d38ed377",
            "route_table_id": "rtb-0a585e944565b2a03",
            "subnet_id": "subnet-03798007526c3652f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb696b529f33ba2b",
            "route_table_id": "rtb-0a585e944565b2a03",
            "subnet_id": "subnet-01086d38196203f2e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767235477326:subnet/subnet-049cbd20f7c7f6c51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.64/27",
            "id": "subnet-049cbd20f7c7f6c51",
            "map_public_ip_on_launch": false,
            "owner_id": "767235477326",
            "vpc_id": "vpc-00630b6179ae52f73"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767235477326:subnet/subnet-00df1e9bd0b088672",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.96/27",
            "id": "subnet-00df1e9bd0b088672",
            "map_public_ip_on_launch": false,
            "owner_id": "767235477326",
            "vpc_id": "vpc-00630b6179ae52f73"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767235477326:subnet/subnet-03798007526c3652f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.0.0/27",
            "id": "subnet-03798007526c3652f",
            "map_public_ip_on_launch": false,
            "owner_id": "767235477326",
            "vpc_id": "vpc-00630b6179ae52f73"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767235477326:subnet/subnet-01086d38196203f2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.32/27",
            "id": "subnet-01086d38196203f2e",
            "map_public_ip_on_launch": false,
            "owner_id": "767235477326",
            "vpc_id": "vpc-00630b6179ae52f73"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767235477326:vpc/vpc-00630b6179ae52f73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-02366c80c36011dd2",
            "default_route_table_id": "rtb-061458de1e0cb8051",
            "default_security_group_id": "sg-0edbf4bef745e8db5",
            "dhcp_options_id": "dopt-0b1950e59e1434a72",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00630b6179ae52f73",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-061458de1e0cb8051",
            "owner_id": "767235477326"
          }
        }
      ]
    }
  ]
}